--- a/package.json
+++ b/package.json
@@ -9,10 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/react": "^18.0.31",
+    "@types/react-native": "^0.71.5",
+    "apollo-link-token-refresh": "^0.4.0",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
+    "graphql": "^15.8.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.5.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-sync-storage": "^1.0.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-redux": "^8.0.5",
+    "typescript": "^4.9.4",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
