--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -18,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "^18.0.31",
     "@types/react-native": "^0.71.5",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.4.0",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
@@ -25,14 +28,15 @@
     "graphql": "^15.8.0",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-sync-storage": "^1.0.0",
     "react-native-tab-view": "^3.5.1",
+    "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "typescript": "^4.9.4",
     "yup": "^1.0.2"
