--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.4.0",
     "expo": "~48.0.9",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-global-props": "^1.1.5",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
