--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:android": "eas build -p android",
+    "build:android:apk": "eas build -p android --profile preview",
     "build:ios": "eas build -p ios"
   },
   "dependencies": {
