Fix config; fix deps;

--- a/eas.json
+++ b/eas.json
@@ -27,6 +27,9 @@
       "developmentClient": true
     },
     "production": {
+      "android":  {
+        "buildType": "apk"
+      },
       "ios": {
         "resourceClass": "m-medium"
       }
