--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:android": "eas build -p android",
-    "build:android:apk": "eas build -p android --profile preview",
+    "build:android:apk": "eas build -p android --profile production",
     "build:ios": "eas build -p ios"
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.7",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -34,7 +34,7 @@
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.7",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-global-props": "^1.1.5",
