--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/react": "^18.0.31",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.71.5",
     "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.4.0",
@@ -40,7 +40,7 @@
     "react-native-global-props": "^1.1.5",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
