--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:android": "eas build -p android",
-    "build:android:apk": "eas build -p android --profile production",
+    "build:android:prod": "eas build -p android --profile production",
+    "build:android:preview": "eas build -p android --profile preview",
     "build:ios": "eas build -p ios"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-global-props": "^1.1.5",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
